[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "globaldetect"
version = "0.1.0"
description = "ISP Network Engineering Utilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DNS Science.io", email = "dev@dnsscience.io"}
]
keywords = ["networking", "isp", "bgp", "dns", "ip", "cidr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: System :: Networking",
]
dependencies = [
    "click>=8.1.0",
    "netaddr>=0.8.0",
    "dnspython>=2.4.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
# Enterprise features: encryption, PostgreSQL
enterprise = [
    "cryptography>=41.0.0",
    "psycopg2-binary>=2.9.0",
]
# Server mode
server = [
    "flask>=3.0.0",
]

[project.scripts]
globaldetect = "globaldetect.cli:main"

[project.urls]
Homepage = "https://github.com/ryan/globaldetect"
Repository = "https://github.com/ryan/globaldetect"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
